[package]
name = "rust_export_magnet_link"
version = "0.1.0"
authors = ["spin6lock <spin6lock@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "*"
reqwest = "*"
error-chain = "*"
clap = "2.33"
